--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
 
     <!-- RESULT OF THE IMAGES-->
     <div class="images">
-        <div></div>
-        <div></div>
-        <div></div>
+        
     </div>
 
         <!-- prompt area-->
         <div class="prompt">
             <input  id="inp" type="text">
-            <button onclick="getImage()">GENERETE</button>
+            <button id="generateButton" >GENERETE</button>
 
         </div>
 
