--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <link rel="icon" href="logog.png" type="image/x-icon">
+
+    <title>VisuIQ</title>
 </head>
 <body>
-
+    
+    <header>
+        <img class="logo" onclick="reload()" src="logog.png" alt=" Logo">
+        <!-- Other header content goes here -->
+    </header>
     <!-- TITLE  -->
-    <H2>AI Image Generator</H2>
+    <H2>VisuIQ- AI Image Generator</H2>
 
     <!-- RESULT OF THE IMAGES-->
     <div class="images">
@@ -19,8 +25,18 @@
         <!-- prompt area-->
         <div class="prompt">
             <input  id="inp" type="text">
-            <button id="generateButton" >GENERETE</button>
+            <button class="btn" id="generateButton" >
+                <svg height="24" width="24" fill="#FFFFFF" viewBox="0 0 24 24" data-name="Layer 1" id="Layer_1" class="sparkle">
+                    <path d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z"></path>
+                </svg>
+            
+                <span class="text">Generate</span>
+            </button>
 
+        </div>
+
+        <div class="txt">
+            <p>cutting-edge AI Image Generator that transforms plain text into stunning visual masterpieces.</p>
         </div>
 
 
